# CrimBot

./: README.md  main.py  pyproject.toml
cogs/: inspiring.py  music.py  pinging.py
