[tool.poetry]
name = "repl_nix_CrimBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.1.0"
Flask = "^2.2.2"
replit = "^3.2.5"
requests = "^2.28.1"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
